--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
             <label for="nombreapellido">Nombre y Apellido</label>
             <input type="text" id="nombreapellido" class="input-padron" required>
 
-            <label for="correo">Correo Electronico</label>
+            <label for="correo">Correo Electrónico</label>
             <input type="email" id="correo" class="input-padron" required placeholder="email@email.com">
 
             <label for="telefono">Teléfono</label>
